[metadata]
name = spykesort
version = 0.0.1
author = Dennis G Wilson
author_email = d9w@pm.me
description = A python library for neural MEA data treatment and spike sorting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/d9w/SpykeSort
project_urls =
    Bug Tracker = https://github.com/d9w/SpykeSort/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
